--- a/assets/scrollFilter.css
+++ b/assets/scrollFilter.css
@@ -58,7 +58,7 @@
 
 #match-number {
     position: fixed;
-    bottom: 30%;
+    bottom: 25%;
     left: 50%;
     font-size: 120px;
     transform: translate(-50%, 0%);
